--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -58,11 +58,14 @@
     {{ content }}
   </main>
 </div>
+
   <!-- footer -->
   <div class="container">
-    <br>
+
     <footer>
-      &copy; {{ site.author }} - {{ site.title }}
+
+      {% include footer.html %}
+
     </footer>
   </div> 
 
