--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -14,13 +14,13 @@
 
     <!-- Right -->
     <div>
-      <a class="btn border-info" style="color: #31D2F2" href="#!" role="button"><i class="bi bi-facebook"></i></a>
+      <a class="btn border-info" target="_blank" style="color: #31D2F2" href="{{ site.facebook_username }}" role="button"><i class="bi bi-facebook"></i></a>
       
-     <a class="btn border-info" style="color: #31D2F2" href="#!" role="button"><i class="bi bi-twitter"></i></a>
-     <a class="btn border-info" style="color: #31D2F2" href="#!" role="button"><i class="bi bi-linkedin"></i></a>
-     <a class="btn border-info" style="color: #31D2F2" href="#!" role="button"><i class="bi bi-instagram"></i></a>
-     <a class="btn border-info" style="color: #31D2F2" href="#!" role="button"><i class="bi bi-youtube"></i></a>
-     <a class="btn border-info" style="color: #31D2F2" href="#!" role="button"><i class="bi bi-github"></i></a>
+     <a class="btn border-info" target="_blank" style="color: #31D2F2" href="{{ site.twitter_username }}" role="button"><i class="bi bi-twitter"></i></a>
+     <a class="btn border-info" target="_blank" target="_blank" style="color: #31D2F2" href="{{ site.linkedin_username }}" role="button"><i class="bi bi-linkedin"></i></a>
+     <a class="btn border-info" target="_blank" style="color: #31D2F2" href="{{ site.instagram_username }}" role="button"><i class="bi bi-instagram"></i></a>
+     <a class="btn border-info" target="_blank" style="color: #31D2F2" href="{{ site.youtube_username }}" role="button"><i class="bi bi-youtube"></i></a>
+     <a class="btn border-info" target="_blank" style="color: #31D2F2" href="{{ site.github_username }}" role="button"><i class="bi bi-github"></i></a>
 
     </div>
     <!-- Right -->
@@ -36,11 +36,10 @@
         <div class="col-md-3 col-lg-4 col-xl-3 mx-auto mb-4">
           <!-- Content -->
           <h6 class="text-uppercase fw-bold mb-4">
-            <i class="fas fa-gem me-3 text-secondary"></i>Company name
+            <i class="fas fa-gem me-3 text-secondary"></i>{{ site.title }}
           </h6>
           <p>
-            Here you can use rows and columns to organize your footer content. Lorem ipsum
-            dolor sit amet, consectetur adipisicing elit.
+            {{ site.description | strip_html | truncate: 120}}
           </p>
         </div>
         <!-- Grid column -->
@@ -52,16 +51,16 @@
             Products
           </h6>
           <p>
-            <a href="#!" class="text-reset">Angular</a>
+            <a href="#!" style="text-decoration: none;" class="text-reset">Angular</a>
           </p>
           <p>
-            <a href="#!" class="text-reset">React</a>
+            <a href="#!" style="text-decoration: none;" class="text-reset">React</a>
           </p>
           <p>
-            <a href="#!" class="text-reset">Vue</a>
+            <a href="#!" style="text-decoration: none;" class="text-reset">Vue</a>
           </p>
           <p>
-            <a href="#!" class="text-reset">Laravel</a>
+            <a href="#!" style="text-decoration: none;" class="text-reset">Laravel</a>
           </p>
         </div>
         <!-- Grid column -->
@@ -73,16 +72,16 @@
             Useful links
           </h6>
           <p>
-            <a href="#!" class="text-reset">Pricing</a>
+            <a href="#!" style="text-decoration: none;" class="text-reset">Pricing</a>
           </p>
           <p>
-            <a href="#!" class="text-reset">Settings</a>
+            <a href="#!" style="text-decoration: none;" class="text-reset">Settings</a>
           </p>
           <p>
-            <a href="#!" class="text-reset">Orders</a>
+            <a href="#!" style="text-decoration: none;" class="text-reset">Orders</a>
           </p>
           <p>
-            <a href="#!" class="text-reset">Help</a>
+            <a href="#!" style="text-decoration: none;" class="text-reset">Help</a>
           </p>
         </div>
         <!-- Grid column -->
@@ -90,14 +89,14 @@
         <!-- Grid column -->
         <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mb-md-0 mb-4">
           <!-- Links -->
-          <h6 class="text-uppercase fw-bold mb-4">Contact</h6>
-          <p><i class="fas fa-home me-3 text-secondary"></i> New York, NY 10012, US</p>
+          <h6 class="text-uppercase fw-bold mb-4"><Address>Address</Address></h6>
+          <p><i class="fas fa-home me-3 text-secondary"></i> {{ site.address }}</p>
           <p>
             <i class="fas fa-envelope me-3 text-secondary"></i>
-            info@example.com
+            {{ site.email }}
           </p>
-          <p><i class="fas fa-phone me-3 text-secondary"></i> + 01 234 567 88</p>
-          <p><i class="fas fa-print me-3 text-secondary"></i> + 01 234 567 89</p>
+          <p><i class="fas fa-phone me-3 text-secondary"></i> {{ site.number }}</p>
+          <p><i class="fas fa-print me-3 text-secondary"></i> {{ site.number }}</p>
         </div>
         <!-- Grid column -->
       </div>
@@ -108,8 +107,8 @@
 
   <!-- Copyright -->
   <div class="text-center p-4" style="background-color: #31D2F2;">
-    © 2021 Copyright:
-    <a class="text-reset fw-bold" href="https://mdbootstrap.com/">MDBootstrap.com</a>
+     &copy; Copyright by
+    <a class="text-reset fw-bold" style="text-decoration: none;" href="{{ site.baseurl }}/">{{ site.title }}</a>
   </div>
   <!-- Copyright -->
 </footer>
