--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,7 +2,10 @@
 <html>
 <head>
   <meta charset="UTF-8">
+  <!-- <link href='https://ahmedsharifkhannoor.blogspot.com/favicon.ico' rel='apple-touch-icon' sizes='120x120'/> -->
   <title>{{ page.title }}</title>
+  <link rel="icon" type="image/x-icon" href="/assets/Images/favicon.ico">
+
   <!-- <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/assets/css/style.css"> -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
