--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -23,6 +23,13 @@
   </nav> -->
   
   <!-- Navbar -->
+
+  <!-- <style>
+    .active {
+      background-color: #007bff; /* Change to your desired active link background color */
+      color: #fff; /* Change to your desired text color */
+    }
+  </style> -->
   
   <div class="container">
   <nav class="navbar navbar-expand-lg bg-body-tertiary" style="background-color: #e3f2fd;">
@@ -35,14 +42,14 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="{{ site.baseurl }}/">Home</a>
+            <a class="nav-link {% if page.url == '/' %}active{% endif %}" aria-current="page" href="{{ site.baseurl }}/">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="{{ site.baseurl }}/about">About</a>
+            <a class="nav-link {% if page.url == '/about/' %}active{% endif %}" href="{{ site.baseurl }}/about">About</a>
           </li>
 
           <li class="nav-item">
-            <a class="nav-link" href="{{ site.baseurl }}/contact">Contact</a>
+            <a class="nav-link {% if page.url == '/contact/' %}active{% endif %}" href="{{ site.baseurl }}/contact">Contact</a>
           </li>
 
           
