--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -65,6 +65,13 @@
 
 <div class="container">
   <main>
+    {% include header.html %}
+  </main>
+</div>
+
+
+<div class="container">
+  <main>
     {{ content }}
   </main>
 </div>
