--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -45,11 +45,11 @@
             <a class="nav-link {% if page.url == '/' %}active{% endif %}" aria-current="page" href="{{ site.baseurl }}/">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link {% if page.url == '/about/' %}active{% endif %}" href="{{ site.baseurl }}/about">About</a>
+            <a class="nav-link {% if page.url == '/about' %}active{% endif %}" href="{{ site.baseurl }}/about">About</a>
           </li>
 
           <li class="nav-item">
-            <a class="nav-link {% if page.url == '/contact/' %}active{% endif %}" href="{{ site.baseurl }}/contact">Contact</a>
+            <a class="nav-link {% if page.url == '/contact' %}active{% endif %}" href="{{ site.baseurl }}/contact">Contact</a>
           </li>
 
           
@@ -63,11 +63,6 @@
   </nav>
 </div>
 
-<div class="container">
-  <main>
-    {% include header.html %}
-  </main>
-</div>
 
 
 <div class="container">
