--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,12 +8,62 @@
 
   <!-- <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/assets/css/style.css"> -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/10.7.2/styles/dracula.min.css">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
+
+<script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/10.7.2/highlight.min.js"></script>
+<script>hljs.initHighlightingOnLoad();</script>
+
+<style>
+  pre code {
+      display: block;
+      padding: 1em;
+      border: 1px solid #ccc;
+      background-color: #000; /* Set the background color to black */
+      color: #fff; /* Set the text color to white */
+  }
+  
+  .copy-code-button {
+      background-color: #0074d9;
+      color: #fff;
+      border: none;
+      padding: 5px 10px;
+      cursor: pointer;
+  }
+  </style>
+  
 
 </head>
 <body>
 
+  <style>
+    pre code {
+        display: block;
+        padding: 1em;
+        overflow-x: auto;
+        border: 1px solid #ccc;
+        background-color: #000; /* Set the background color to black */
+        color: #fff; /* Set the text color to white */
+    }
+    
+    .copy-code-button {
+      background-color: transparent;
+      color: #31D2F2;
+      border: 2px solid #31D2F2;
+      padding: 5px 10px;
+      cursor: pointer;
+      margin: 10px 0;
+      transition: background-color 0.3s, color 0.3s; /* Add transition properties */
+  }
   
+  .copy-code-button:hover {
+      background-color: #31D2F2; /* Change color on hover */
+      color: #fff; /* Change text color on hover */
+    }
+    </style>
+
+
+    
   <!-- <nav>
     <ul>
       <li><a href="{{ site.baseurl }}/index.html">Home</a></li>
@@ -83,6 +133,44 @@
 
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.8.0/highlight.min.js"></script>
 
+<!-- and it's easy to individually load additional languages -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.8.0/languages/go.min.js"></script>
+
+<script>hljs.highlightAll();</script>
+
+<script>
+document.addEventListener('DOMContentLoaded', (event) => {
+    const codeBlocks = document.querySelectorAll('pre code');
+
+    codeBlocks.forEach((codeBlock) => {
+        const button = document.createElement('button');
+        button.className = 'copy-code-button';
+        button.textContent = 'Copy Code';
+
+        button.addEventListener('click', () => {
+            const textArea = document.createElement('textarea');
+            textArea.value = codeBlock.innerText;
+            document.body.appendChild(textArea);
+            textArea.select();
+            document.execCommand('copy');
+            document.body.removeChild(textArea);
+        });
+
+        codeBlock.parentNode.insertBefore(button, codeBlock.nextSibling);
+    });
+});
+</script>
+
+  
+<!-- <script>
+  document.addEventListener('DOMContentLoaded', (event) => {
+      console.log('Script is running.'); // Add this line
+      const codeBlocks = document.querySelectorAll('pre code');
+      // Rest of your JavaScript code
+  });
+  </script> -->
+  
 </body>
 </html>
