--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <!-- <link href='https://ahmedsharifkhannoor.blogspot.com/favicon.ico' rel='apple-touch-icon' sizes='120x120'/> -->
-  <title>{{ page.title }}</title>
+  <title>{{ page.title }} | CodeNinja </title>
   <link rel="icon" type="image/x-icon" href="/assets/Images/favicon.ico">
 
   <!-- <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/assets/css/style.css"> -->
