--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,13 +6,13 @@
 
   <!-- <link href='https://ahmedsharifkhannoor.blogspot.com/favicon.ico' rel='apple-touch-icon' sizes='120x120'/> -->
   <title>{{ page.title }}</title>
-  <link rel="icon" type="image/x-icon" href="/assets/Images/favicon.ico">
+  <link rel="icon" type="image/x-icon" href="{{ site.baseurl }}/assets/Images/favicon.ico">
 
   <!-- <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/assets/css/style.css"> -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/10.7.2/styles/dracula.min.css">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
-  <link rel="stylesheet" href="/assets/css/media.css">
+  <link rel="stylesheet" href="{{ site.baseurl }}/assets/css/media.css">
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/10.7.2/highlight.min.js"></script>
 <script>hljs.initHighlightingOnLoad();</script>
