--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -14,13 +14,18 @@
 
     <!-- Right -->
     <div>
-      <a class="btn border-info" target="_blank" style="color: #31D2F2" href="{{ site.facebook_username }}" role="button"><i class="bi bi-facebook"></i></a>
-      
-     <a class="btn border-info" target="_blank" style="color: #31D2F2" href="{{ site.twitter_username }}" role="button"><i class="bi bi-twitter"></i></a>
-     <a class="btn border-info" target="_blank" target="_blank" style="color: #31D2F2" href="{{ site.linkedin_username }}" role="button"><i class="bi bi-linkedin"></i></a>
-     <a class="btn border-info" target="_blank" style="color: #31D2F2" href="{{ site.instagram_username }}" role="button"><i class="bi bi-instagram"></i></a>
-     <a class="btn border-info" target="_blank" style="color: #31D2F2" href="{{ site.youtube_username }}" role="button"><i class="bi bi-youtube"></i></a>
-     <a class="btn border-info" target="_blank" style="color: #31D2F2" href="{{ site.github_username }}" role="button"><i class="bi bi-github"></i></a>
+      <a class="btn border-info" target="_blank" style="color: #31D2F2" href="{{ site.facebook_username }}"
+        role="button"><i class="bi bi-facebook"></i></a>
+      <a class="btn border-info" target="_blank" style="color: #31D2F2" href="{{ site.twitter_username }}"
+        role="button"><i class="bi bi-twitter"></i></a>
+      <a class="btn border-info" target="_blank" target="_blank" style="color: #31D2F2"
+        href="{{ site.linkedin_username }}" role="button"><i class="bi bi-linkedin"></i></a>
+      <a class="btn border-info" target="_blank" style="color: #31D2F2" href="{{ site.instagram_username }}"
+        role="button"><i class="bi bi-instagram"></i></a>
+      <a class="btn border-info" target="_blank" style="color: #31D2F2" href="{{ site.youtube_username }}"
+        role="button"><i class="bi bi-youtube"></i></a>
+      <a class="btn border-info" target="_blank" style="color: #31D2F2" href="{{ site.github_username }}"
+        role="button"><i class="bi bi-github"></i></a>
 
     </div>
     <!-- Right -->
@@ -89,7 +94,9 @@
         <!-- Grid column -->
         <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mb-md-0 mb-4">
           <!-- Links -->
-          <h6 class="text-uppercase fw-bold mb-4"><Address>Address</Address></h6>
+          <h6 class="text-uppercase fw-bold mb-4">
+            <Address>Address</Address>
+          </h6>
           <p><i class="fas fa-home me-3 text-secondary"></i> {{ site.address }}</p>
           <p>
             <i class="fas fa-envelope me-3 text-secondary"></i>
@@ -107,7 +114,7 @@
 
   <!-- Copyright -->
   <div class="text-center p-4" style="background-color: #31D2F2;">
-     &copy; Copyright by
+    &copy; Copyright by
     <a class="text-reset fw-bold" style="text-decoration: none;" href="{{ site.baseurl }}/">{{ site.title }}</a>
   </div>
   <!-- Copyright -->
