--- a/_layouts/blog.html
+++ b/_layouts/blog.html
@@ -1,15 +1,9 @@
 ---
 layout: default
-title: Blog
 ---
-
-<h1>Blog</h1>
-
-<ul>
-  {% for post in site.posts %}
-  <li>
-    <a href="{{ post.url }}">{{ post.title }}</a>
-  </li>
-  {% endfor %}
-</ul>
-
+<h1>Blog Details page</h1> 
+<div class="post">
+  <h1>{{ page.title }}</h1>
+  <p>{{ page.date | date: "%B %d, %Y" }}</p>
+  {{ content }}
+</div>
