--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -85,7 +85,7 @@
   </style> -->
   
   <div class="container">
-  <nav class="navbar navbar-expand-lg bg-body-tertiary" style="background-color: #e3f2fd;">
+  <nav class="navbar navbar-expand-lg bg-body-tertiary" style="background-color: #0989df;">
     <div class="container-fluid">
       <a class="navbar-brand" href="{{ site.baseurl }}/">CodeNinja</a>
 
