--- a/_includes/header.html
+++ b/_includes/header.html
@@ -52,7 +52,7 @@
     <div
       id="intro-example"
       class="p-5 text-center bg-image"
-      style="background-image: url('https://mdbcdn.b-cdn.net/img/new/slides/041.webp');"
+      style="background-image: url('https://tds-images.thedailystar.net/sites/default/files/styles/big_202/public/images/2023/10/11/dalle_2023-10-11_19.41.32_-_bright_and_lively_landscape_illustration_of_a_bangladeshi_woman_with_tan_skin_and_black_hair_in_traditional_attire_completely_immersed_in_a_game_on_h.png');"
     >
       <div class="mask" style="background-color: rgba(0, 0, 0, 0.7);">
         <div class="d-flex justify-content-center align-items-center h-100">
