--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -17,9 +17,12 @@
           <li class="nav-item">
             <a class="nav-link {% if page.url == '/contact' %}text-info{% endif %}" href="{{ site.baseurl }}/contact"><b>Contact</b></a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link {% if page.url == '/author' %}text-info{% endif %}" href="{{ site.baseurl }}/authors"><b>Author</b></a>
+          </li>
 
-          
-  
+
+
         <!-- <form class="d-flex" role="search">
           <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
           <button class="btn btn-outline-success" type="submit">Search</button>
