--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,7 +2,11 @@
 <html>
 <head>
   <meta charset="UTF-8">
+  
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="description" content="Free Web tutorials">
+  <meta name="keywords" content="HTML, CSS, JavaScript">
+  <meta name="author" content="John Doe">
 
   <!-- <link href='https://ahmedsharifkhannoor.blogspot.com/favicon.ico' rel='apple-touch-icon' sizes='120x120'/> -->
   <title>{{ page.title }}</title>
@@ -67,11 +71,12 @@
 
 
   
-  
-  <div class="container">
-     <!-- Include the navbar -->
-     {% include navbar.html %}
-  </div>
+  <header>
+    <div class="container">
+       <!-- Include the navbar -->
+       {% include navbar.html %}
+    </div>
+  </header>
 
 
 
