--- a/_layouts/blog-post.html
+++ b/_layouts/blog-post.html
@@ -31,7 +31,7 @@ layout: default
               <img src="https://mdbootstrap.com/img/Photos/Avatars/img (23).jpg" class="rounded-5 shadow-1-strong me-2"
                 height="35" alt="" loading="lazy" />
               <span> Published {{ page.date | date: "%B %d, %Y" }} by</span>
-              <a href="#" class="text-dark">Anna</a>
+              <a href="/authors/{{ post.author }}/" class="text-dark" style="text-decoration: none;">{{ page.name }} {{ site.data.authors[post.author].name }}</a>
             </div>
 
             <div class="col-lg-6 text-center text-lg-end">
