--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -11,14 +11,14 @@
             <a class="nav-link {% if page.url == '/' %}text-info{% endif %}" aria-current="page" href="{{ site.baseurl }}/"><b>Home</b></a>
           </li>
           <li class="nav-item">
+            <a class="nav-link {% if page.url == '/blog' %}text-info{% endif %}" href="{{ site.baseurl }}/blog"><b>Blog</b></a>
+          </li>
+          <li class="nav-item">
             <a class="nav-link {% if page.url == '/about' %}text-info{% endif %}" href="{{ site.baseurl }}/about"><b>About</b></a>
           </li>
-
+          
           <li class="nav-item">
             <a class="nav-link {% if page.url == '/contact' %}text-info{% endif %}" href="{{ site.baseurl }}/contact"><b>Contact</b></a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link {% if page.url == '/author' %}text-info{% endif %}" href="{{ site.baseurl }}/authors"><b>Author</b></a>
           </li>
 
 
