--- a/_layouts/blog-post.html
+++ b/_layouts/blog-post.html
@@ -28,13 +28,11 @@ layout: default
 
           <div class="row align-items-center mb-4">
             <div class="col-lg-6 text-center text-lg-start mb-3 m-lg-0">
-              <img src="https://mdbootstrap.com/img/Photos/Avatars/img (23).jpg" class="rounded-5 shadow-1-strong me-2"
-                height="35" alt="" loading="lazy" />
-              <span> Published {{ page.date | date: "%B %d, %Y" }} by</span>
-              <a href="/authors/{{ post.author }}/" class="text-dark" style="text-decoration: none;">{{ page.name }} {{ site.data.authors[post.author].name }}</a>
-            </div>
-
-            <div class="col-lg-6 text-center text-lg-end">
+              <img src="{{ site.baseurl }}/assets/Images/favicon2.png" class="rounded-5 shadow-1-strong me-2"
+                height="35" alt="{{ page.author_name }}" loading="lazy" />
+              <span><b>{{ page.author_name }}</b> - {{ page.date | date: "%B %d, %Y" }}</span>
+              </div>
+              <div class="col-lg-6 text-center text-lg-end">
               <a class="btn border-info" target="_blank" style="color: #31D2F2" href="{{ site.facebook_username }}"
                 role="button"><i class="bi bi-facebook"></i></a>
               <a class="btn border-info" target="_blank" style="color: #31D2F2" href="{{ site.twitter_username }}"
@@ -54,7 +52,7 @@ layout: default
         <!--Section: Post data-mdb-->
 
         <!--Section: Text-->
-        
+
 
 
 
@@ -70,103 +68,61 @@ layout: default
         <section class="text-center border-top border-bottom py-4 mb-4">
           <p><strong>Leave a comment:</strong></p>
 
-          <form>
-            <!-- Name input -->
-            <div class="form-outline mb-3">
-              <input type="text" id="form4Example1" class="form-control" />
-              <label class="form-label" for="form4Example1">Name</label>
-            </div>
 
-            <!-- Email input -->
-            <div class="form-outline mb-4">
-              <input type="email" id="form4Example2" class="form-control" />
-              <label class="form-label" for="form4Example2">Email address</label>
-            </div>
+          <div id="disqus_thread"></div>
+          <script>
+            /**
+            *  RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
+            *  LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables    */
 
-            <!-- Message input -->
-            <div class="form-outline mb-4">
-              <textarea class="form-control" id="form4Example3" rows="4"></textarea>
-              <label class="form-label" for="form4Example3">Text</label>
-            </div>
+            var disqus_config = function () {
+              this.page.url = "{{content.absolute_url}}";  // Replace PAGE_URL with your page's canonical URL variable
+              this.page.identifier = "{{content_id}}"; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
+            };
 
-            <!-- Checkbox -->
-            <!-- <div class="form-check d-flex justify-content-center mb-4">
-                <input class="form-check-input me-2" type="checkbox" value="" id="form4Example4" checked />
-                <label class="form-check-label" for="form4Example4">
-                  Send me a copy of this comment
-                </label>
-              </div> -->
+            (function () { // DON'T EDIT BELOW THIS LINE
+              var d = document, s = d.createElement('script');
+              s.src = 'https://harmony-5.disqus.com/embed.js';
+              s.setAttribute('data-timestamp', +new Date());
+              (d.head || d.body).appendChild(s);
+            })();
+          </script>
+          <script id="dsq-count-scr" src="//harmony-5.disqus.com/count.js" async></script>
 
-            <!-- Submit button -->
-            <button type="submit" class="btn border-info btn-block mb-4">
-              Publish
-            </button>
-          </form>
-        </section>
-        <!--Section: Share buttons-->
 
-        <!--Section: Author-->
-        <section class="border-bottom mb-4 pb-4">
-          <div class="row">
-            <div class="col-3">
-              <img src="https://mdbootstrap.com/img/Photos/Avatars/img%20(23).jpg"
-                class="img-fluid shadow-1-strong rounded-5" alt="" />
-            </div>
 
-            <div class="col-9">
-              <p class="mb-2"><strong>Anna Maria Doe</strong></p>
-              <a href="" class="text-dark"><i class="fab fa-facebook-f me-1"></i></a>
-              <a href="" class="text-dark"><i class="fab fa-twitter me-1"></i></a>
-              <a href="" class="text-dark"><i class="fab fa-linkedin me-1"></i></a>
-              <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio est ab iure
-                inventore dolorum consectetur? Molestiae aperiam atque quasi consequatur aut?
-                Repellendus alias dolor ad nam, soluta distinctio quis accusantium!
-              </p>
-            </div>
-          </div>
-        </section>
-        <!--Section: Author-->
 
-        <!--Section: Comments-->
-        <section class="border-bottom mb-3">
-          <p class="text-center"><strong>Comments: 3</strong></p>
 
           <!-- Comment -->
-          <div class="row mb-4">
-            <div class="col-2">
-              <img src="https://mdbootstrap.com/img/Photos/Avatars/img%20(24).jpg"
-                class="img-fluid shadow-1-strong rounded-5" alt="" />
-            </div>
 
-            <div class="col-10">
-              <p class="mb-2"><strong>Marta Dolores</strong></p>
-              <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio est ab iure
-                inventore dolorum consectetur? Molestiae aperiam atque quasi consequatur aut?
-                Repellendus alias dolor ad nam, soluta distinctio quis accusantium!
-              </p>
-            </div>
-          </div>
 
-          <!-- Comment -->
-          <div class="row mb-4">
-            <div class="col-2">
-              <img src="https://mdbootstrap.com/img/Photos/Avatars/img%20(25).jpg"
-                class="img-fluid shadow-1-strong rounded-5" alt="" />
-            </div>
+          <!-- 
+  
+      <div id="disqus_thread"></div>
+  
+  <script>
+    /**
+    *  RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
+    *  LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables    */
+    
 
-            <div class="col-10">
-              <p class="mb-2"><strong>Valeria Groove</strong></p>
-              <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio est ab iure
-                inventore dolorum consectetur? Molestiae aperiam atque quasi consequatur aut?
-                Repellendus alias dolor ad nam, soluta distinctio quis accusantium!
-              </p>
-            </div>
-          </div>
+    var disqus_config = function () {
+    this.page.url = "{{content.absolute_url}}";  // Replace PAGE_URL with your page's canonical URL variable
+    this.page.identifier = "{{content_id}}"; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
+    };
+    
 
-          <!-- Comment -->
+    (function() { // DON'T EDIT BELOW THIS LINE
+    var d = document, s = d.createElement('script');
+    s.src = 'https://harmony-4.disqus.com/embed.js';
+    s.setAttribute('data-timestamp', +new Date());
+    (d.head || d.body).appendChild(s);
+    })();
+</script>
+
+
+
+
           <div class="row mb-4">
             <div class="col-2">
               <img src="https://mdbootstrap.com/img/Photos/Avatars/img%20(26).jpg"
@@ -185,9 +141,9 @@ layout: default
         </section>
         <!--Section: Comments-->
 
-        <!--Section: Reply-->
+          <!--Section: Reply-->
 
-        <!--Section: Reply-->
+          <!--Section: Reply-->
       </div>
       <!--Grid column-->
 
@@ -212,8 +168,8 @@ layout: default
               500+ components, free templates, 1-min installation, extensive tutorial, huge
               community. MIT license - free for personal & commercial use
             </p>
-            <a role="button" class="btn border-info" href="#"
-              target="_blank">Download for free<i class="fas fa-download ms-2"></i></a>
+            <a role="button" class="btn border-info" href="#" target="_blank">Download for free<i
+                class="fas fa-download ms-2"></i></a>
           </section>
           <!--Section: Ad-->
 
@@ -226,30 +182,21 @@ layout: default
                 allowfullscreen></iframe>
 
               <section class="text-center">
-                <h5 class="mb-4">Share Content Any Favourite Site</h5>
+                <h5 class="mb-5 mt-4">Share Content Any Favourite Site</h5>
+
                 <!-- AddToAny BEGIN -->
-                <style>
-                  .a2a_kit {
-                    text-align: center; /* Center the contents horizontally */
-                    margin: 0 auto; /* Center the container horizontally */
-                    /* Additional styles if needed */
-                  }
-                </style>
                 <div class="a2a_kit a2a_kit_size_32 a2a_default_style">
-                  <!-- <a class="a2a_dd" href="https://www.addtoany.com/share"></a> -->
+                  <a class="a2a_dd" href="https://www.addtoany.com/share"></a>
                   <a class="a2a_button_facebook"></a>
-                  <a class="a2a_button_twitter"></a>
-                  <a class="a2a_button_linkedin"></a>
-                  <a class="a2a_button_facebook_messenger"></a>
-                  <a class="a2a_button_telegram"></a>
                   <a class="a2a_button_whatsapp"></a>
-                  <a class="a2a_button_email"></a>
-                  <a class="a2a_button_pinterest"></a>
+                  <a class="a2a_button_linkedin"></a>
+                  <a class="a2a_button_telegram"></a>
+                  <a class="a2a_button_x"></a>
                   <a class="a2a_button_copy_link"></a>
                 </div>
-                <script async src="https://static.addtoany.com/menu/page.js"></script>
               </section>
-                <!-- AddToAny END -->
+              <script async src="https://static.addtoany.com/menu/page.js"></script>
+
             </div>
           </section>
 
