--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -1,3 +1,31 @@
+<!-- code copy button style -->
+<style>
+  pre code {
+      display: block;
+      padding: 1em;
+      overflow-x: auto;
+      border: 1px solid #ccc;
+      background-color: #000; /* Set the background color to black */
+      color: #fff; /* Set the text color to white */
+  }
+  
+  .copy-code-button {
+    background-color: transparent;
+    color: #31D2F2;
+    border: 2px solid #31D2F2;
+    padding: 5px 10px;
+    cursor: pointer;
+    margin: 10px 0;
+    transition: background-color 0.3s, color 0.3s; /* Add transition properties */
+}
+
+.copy-code-button:hover {
+    background-color: #31D2F2; /* Change color on hover */
+    color: #fff; /* Change text color on hover */
+  }
+  </style>
+  
+<!-- ---------------------------------------------------------------- -->
 <nav class="navbar navbar-expand-lg bg-body-tertiary" style="background-color: #0989df;">
     <div class="container-fluid">
       <a class="navbar-brand" href="{{ site.baseurl }}/">{{ site.title }}</a>
@@ -20,6 +48,12 @@
           <li class="nav-item">
             <a class="nav-link {% if page.url == '/contact' %}text-info{% endif %}" href="{{ site.baseurl }}/contact"><b>Contact</b></a>
           </li>
+
+          <li class="nav-item">
+  <a class="nav-link {% if page.url == '/resume' %}text-info{% endif %}" href="{{ site.baseurl }}/resume"><b>Resume</b></a>
+</li>
+         
+          
 
 
 
