--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,46 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <meta charset="UTF-8">
-  
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="description" content="Free Web tutorials">
-  <meta name="keywords" content="HTML, CSS, JavaScript">
-  <meta name="author" content="John Doe">
-
-  <!-- <link href='https://ahmedsharifkhannoor.blogspot.com/favicon.ico' rel='apple-touch-icon' sizes='120x120'/> -->
-  <title>{{ page.title }}</title>
-  <link rel="icon" type="image/x-icon" href="{{ site.baseurl }}/assets/Images/favicon2.png">
-
-  <!-- <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/assets/css/style.css"> -->
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/10.7.2/styles/dracula.min.css">
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
-  <link rel="stylesheet" href="{{ site.baseurl }}/assets/css/media.css">
-
-<script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/10.7.2/highlight.min.js"></script>
-<script>hljs.initHighlightingOnLoad();</script>
-
-<style>
-  pre code {
-      display: block;
-      padding: 1em;
-      border: 1px solid #ccc;
-      background-color: #000; /* Set the background color to black */
-      color: #fff; /* Set the text color to white */
-  }
-  
-  .copy-code-button {
-      background-color: #0074d9;
-      color: #fff;
-      border: none;
-      padding: 5px 10px;
-      cursor: pointer;
-  }
-  </style>
-  
+  {% include head.html %}
 
 </head>
+
 <body>
 
   <style>
@@ -88,45 +52,13 @@
 
   <!-- footer -->
   <div class="container">
-
     <footer>
-
       {% include footer.html %}
-
     </footer>
   </div> 
 
 
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.8.0/highlight.min.js"></script>
-
-<!-- and it's easy to individually load additional languages -->
-<script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.8.0/languages/go.min.js"></script>
-
-<script>hljs.highlightAll();</script>
-
-<script>
-document.addEventListener('DOMContentLoaded', (event) => {
-    const codeBlocks = document.querySelectorAll('pre code');
-
-    codeBlocks.forEach((codeBlock) => {
-        const button = document.createElement('button');
-        button.className = 'copy-code-button';
-        button.textContent = 'Copy Code';
-
-        button.addEventListener('click', () => {
-            const textArea = document.createElement('textarea');
-            textArea.value = codeBlock.innerText;
-            document.body.appendChild(textArea);
-            textArea.select();
-            document.execCommand('copy');
-            document.body.removeChild(textArea);
-        });
-
-        codeBlock.parentNode.insertBefore(button, codeBlock.nextSibling);
-    });
-});
-</script>
+  {% include script.html  %}
 
 
 </body>
